--- a/devagro-frontend/package.json
+++ b/devagro-frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
     "chart.js": "^3.8.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
